--- a/assignment_clustering.ipynb
+++ b/assignment_clustering.ipynb
@@ -869,7 +869,7 @@
    "id": "73ccb323",
    "metadata": {},
    "source": [
-    "Yes, the k-means clustering algorithm did find useful patterns in analyzing the spending data. By grouping countries using all four variables, the algorithm revealed clusters that reflect both the scale and the priority of military spending. This approach helped identify just the biggest spenders and also countries where military spending is a major national focus. k-means helped me see which countries are similar when considering both how much they spend and how much of their resources go to defense, giving a view of global military spending."
+    "Yes. The k-means clustering algorithm did find useful patterns in analyzing the spending data. By grouping countries using all four variables, the algorithm revealed clusters that reflect both the scale and the priority of military spending. This approach helped identify just the biggest spenders and also countries where military spending is a major national focus. k-means helped me see which countries are similar when considering both how much they spend and how much of their resources go to defense which gives a view of global military spending."
    ]
   }
  ],
